Name:           sexp
Version:        0.5
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/sexp
Category:       Language, Parsing
Synopsis:       S-Expression parsing, printing, and type reification
Build-Type:     Simple
Description:
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, LICENSE

Source-repository head
  Type:                 git
  Location:             https://github.com/scvalex/sexp.git

Library
  Build-depends:        base >= 4 && < 5, attoparsec, bytestring
  Ghc-options:          -Wall
  Exposed-modules:      Language.Sexp

Test-suite parse
  Hs-Source-Dirs:       Test, .
  Main-Is:              Parse.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && <5, attoparsec, bytestring
  Ghc-Options:          -Wall

  Build-Depends:        test-framework, test-framework-hunit, HUnit
